﻿2.0.0
  * ruby,railsバージョンアップ
  * 受信メールの多言語表示
  * imap/smtp/sso設定をconfigディレクトリに移動
  * 不要データを削除するcronタスクを追加

1.3.1
  * TinyMCEバージョンアップ
  * IE11で一部の機能が動作しない不具合を修正
  * メール送信日時の表示が実際の送信日時からずれる不具合を修正
  * 特定の添付ファイル名でメールを正常に転送できない不具合を修正
  * 個人アドレス帳の階層変更時に表示がずれる不具合を修正
  * セキュリティ対策

1.3.0
  * 送信メール文字コード設定機能
  * 受信メール非対応エンコード表示機能
  * メールボックス使用容量を毎回更新
  * マルチパートメールのContent-Typeにcharsetが付加される不具合を修正
  * 添付ファイル有無の判定を調整

1.2.1
  * swfuploadバージョンアップ
  * 特定のHTMLメールが表示されない不具合を修正
  * アドレス帳で無効所属が表示される不具合を修正
  * メールドラッグ時に件名が表示されない不具合を修正
  * message/rfc822解析処理を追加
  * メール解析エラー時の例外処理を追加
  * CSSの調整

1.2.0
  * ラベル機能
  * アカウント切替機能
  * 不具合修正

1.1.0
  * IMAP QUOTAコマンド対応
  * HTMLメール作成機能
  * 迷惑メール登録機能
  * クイックアドレス帳
  * スター機能
  * メールドラッグ＆ドロップ機能
  * 添付ファイル一括ダウンロード機能
  * 添付ファイル画像サムネイル表示機能
  * ヘルプ記事登録機能
  * スマートフォン対応
  * 不具合修正

1.0.1
  * 動作環境を更新
  * インストールマニュアルを修正
  * Gemfileを修正

1.0.0
  * Joruri Mail/公開