@@ -7,17 +7,17 @@ end
 %>
 <div class="menu">
   <div class="leftMenu">
-    <%= link_to Joruri.config.application['webmail.mail_menu'], gw_webmail_mails_path('INBOX'), class: cls.call(:mail) %>
-    <%= link_to Joruri.config.application['webmail.mailbox_menu'], gw_webmail_mailboxes_path('INBOX'), class: cls.call(:mailbox) %>
-    <%= link_to Joruri.config.application['webmail.sys_address_menu'], gw_webmail_sys_addresses_path, class: cls.call(:sys_address) %>
-    <%= link_to Joruri.config.application['webmail.address_group_menu'], gw_webmail_address_groups_path, class: cls.call(:address) %>
-    <%= link_to Joruri.config.application['webmail.filter_menu'], gw_webmail_filters_path, class: cls.call(:filter) %>
-    <%= link_to Joruri.config.application['webmail.template_menu'], gw_webmail_templates_path, class: cls.call(:template) %>
-    <%= link_to Joruri.config.application['webmail.sign_menu'], gw_webmail_signs_path, class: cls.call(:sign) %>
-    <%= link_to Joruri.config.application['webmail.memo_menu'], gw_webmail_memo_path(0), class: cls.call(:memo) %>
-    <%= link_to Joruri.config.application['webmail.tool_menu'], batch_delete_gw_webmail_tools_path, class: cls.call(:tool) %>
-    <%= link_to Joruri.config.application['webmail.setting_menu'], gw_webmail_settings_path('mail_list'), class: cls.call(:setting) %>
-    <%= link_to Joruri.config.application['webmail.doc_menu'], gw_webmail_docs_path, class: cls.call(:doc) %>
+    <%= link_to t('webmail.menus.mail'), gw_webmail_mails_path('INBOX'), class: cls.call(:mail) %>
+    <%= link_to t('webmail.menus.mailbox'), gw_webmail_mailboxes_path('INBOX'), class: cls.call(:mailbox) %>
+    <%= link_to t('webmail.menus.sys_address'), gw_webmail_sys_addresses_path, class: cls.call(:sys_address) %>
+    <%= link_to t('webmail.menus.address_group'), gw_webmail_address_groups_path, class: cls.call(:address) %>
+    <%= link_to t('webmail.menus.filter'), gw_webmail_filters_path, class: cls.call(:filter) %>
+    <%= link_to t('webmail.menus.template'), gw_webmail_templates_path, class: cls.call(:template) %>
+    <%= link_to t('webmail.menus.sign'), gw_webmail_signs_path, class: cls.call(:sign) %>
+    <%= link_to t('webmail.menus.memo'), gw_webmail_memo_path(0), class: cls.call(:memo) %>
+    <%= link_to t('webmail.menus.tool'), batch_delete_gw_webmail_tools_path, class: cls.call(:tool) %>
+    <%= link_to t('webmail.menus.setting'), gw_webmail_settings_path('mail_list'), class: cls.call(:setting) %>
+    <%= link_to t('webmail.menus.doc'), gw_webmail_docs_path, class: cls.call(:doc) %>
   </div>  
   <div class="rightMenu">
     文字サイズ
