@@ -1,6 +1,6 @@
 <div id="openAddress">
-  <a href="#openAddressSelector" data-prefix="sys"><%= Joruri.config.application['webmail.sys_address_menu'] %></a>
-  <a href="#openAddressSelector" data-prefix="pri"><%= Joruri.config.application['webmail.address_group_menu'] %></a>
+  <a href="#openAddressSelector" data-prefix="sys"><%= t('webmail.menus.sys_address') %></a>
+  <a href="#openAddressSelector" data-prefix="pri"><%= t('webmail.menus.address_group') %></a>
 </div>
 
 <%= render 'gw/admin/webmail/base/address_selector' %>
