@@ -20,8 +20,8 @@ end
 
 <div class="addressMenu">
   <div class="menus">
-    <%= submit_tag Joruri.config.application['webmail.sys_address_menu'], class: 'sysAddress', name: 'addSysAddress' %>
-    <%= submit_tag Joruri.config.application['webmail.address_group_menu'], class: 'priAddress', name: 'addPriAddress' %>
+    <%= submit_tag t('webmail.menus.sys_address'), class: 'sysAddress', name: 'addSysAddress' %>
+    <%= submit_tag t('webmail.menus.address_group'), class: 'priAddress', name: 'addPriAddress' %>
   </div>
 </div>
 
