@@ -23,7 +23,7 @@
   <% if (message = mail_form_download_message).present? %>
   <tr>
     <td class="attention" colspan="2">
-      <%=raw message %>
+      <%= message %>
     </td>
   </tr>
   <% end %>
