@@ -1,6 +1,6 @@
 <% if maintenance = recent_maintenance %>
 <div id="maintenance">
-  <%= link_to "#{maintenance.title} #{I18n.l(maintenance.published_at)}", gw_webmail_mails_path('INBOX', mobile: :maintenance), class: 'maintenanceLink' %>
+  <%= link_to "#{maintenance.title} #{l(maintenance.published_at)}", gw_webmail_mails_path('INBOX', mobile: :maintenance), class: 'maintenanceLink' %>
 </div>
 <% end %>
 
@@ -13,9 +13,9 @@
   <div class="title"><span>送信メニュー</span></div>
   <div class="menus">
     <%= link_to 'メール作成', new_gw_webmail_mail_path('INBOX'), class: 'createMail' %><br />
-    <%= link_to Joruri.config.application['webmail.sys_address_menu'], gw_webmail_sys_addresses_path, class: 'sysAddress' %>
-    <%= link_to Joruri.config.application['webmail.address_group_menu'], gw_webmail_address_groups_path, class: 'addressGroup' %>
-    <%= link_to Joruri.config.application['webmail.memo_menu'], gw_webmail_memo_path(0), class: 'memo' %>
+    <%= link_to t('webmail.menus.sys_address'), gw_webmail_sys_addresses_path, class: 'sysAddress' %>
+    <%= link_to t('webmail.menus.address_group'), gw_webmail_address_groups_path, class: 'addressGroup' %>
+    <%= link_to t('webmail.menus.memo'), gw_webmail_memo_path(0), class: 'memo' %>
   </div>
 </div>
 
