@@ -70,7 +70,7 @@
 <div class="title"><img src="/_common/themes/admin/gw/webmail/mobile/images/clip-glay.jpg" alt="[有]">添付ファイル</div>
 <% if (message = mail_form_download_message).present? %>
 <div class="attention">
-  <%=raw message %>
+  <%= message %>
 </div>
 <% end %>
 <div class="files">
