@@ -145,7 +145,7 @@ inline_contents = @item.inline_contents
   <% if (message = mail_form_download_message).present? %>
   <tr>
     <td class="attention">
-      <%=raw message %>
+      <%= message %>
     </td>
   </tr>
   <% end %>
