@@ -1,4 +1,4 @@
-<div class="groups"><%= Joruri.config.application['webmail.sys_address_menu'] %></div>
+<div class="groups"><%= t('webmail.menus.sys_address') %></div>
 <div class="sysUser">
 <div class="showItem">
   <font class="title"><%= '所属部署' %></font>
