@@ -1,5 +1,5 @@
 <div class="sysAddressTitle">
-  <%= Joruri.config.application['webmail.sys_address_menu'] %>
+  <%= t('webmail.menus.sys_address') %>
 </div>
 
 <table class="show">
