@@ -22,7 +22,7 @@
     <span class="link">
       <a class="logout" href="/_admin/logout">ログアウト</a></span>
   <span class="previousLogin">
-    前回ログイン日時　<%= Core.user && Core.user.previous_login_date ? I18n.l(Core.user.previous_login_date) : '---' %>
+    前回ログイン日時　<%= Core.user && Core.user.previous_login_date ? l(Core.user.previous_login_date) : '---' %>
   </span>
   </div>
 
