@@ -6,4 +6,4 @@
 </div>
 <br />
 <br />
-<%=raw Joruri.config.application['sys.mobile_footer'] %>
+<%= t('sys.shared.mobile_footer_html') %>
