@@ -5,6 +5,6 @@
 </div>
 <% end %>
 <div class="personal">
-  前回ログイン日時　<%= Core.user && Core.user.previous_login_date ? I18n.l(Core.user.previous_login_date) : '---' %>
+  前回ログイン日時　<%= Core.user && Core.user.previous_login_date ? l(Core.user.previous_login_date) : '---' %>
 </div>
 <div class="logout"><a href="/_admin/logout">&gt;ログアウト</a></div>
