@@ -29,7 +29,7 @@
   <% end %>
 </div>
 
-<%=raw Joruri.config.application['sys.mobile_footer'] %>
+<%= t('sys.shared.mobile_footer_html') %>
 
 </div>
 
