@@ -1,0 +1,5 @@
+ja:
+  sys:
+    shared:
+      login_footer_html: ''
+      mobile_footer_html: ''
