@@ -5,8 +5,6 @@ module Joruri
   
   def self.default_config
     { "application" => {
-        "sys.login_footer"                       => "",
-        "sys.mobile_footer"                      => "",
         "sys.session_expiration"                 => 24,
         "sys.session_expiration_for_mobile"      => 1,
         "sys.force_site"                         => "",
@@ -17,18 +15,7 @@ module Joruri
         "webmail.filter_condition_max_count"     => 100,
         "webmail.mail_address_history_max_count" => 100,
         "webmail.synchronize_mobile_setting"     => 0,
-        "webmail.show_gw_schedule_link"          => 1,
-        "webmail.mail_menu"                      => "メール",
-        "webmail.mailbox_menu"                   => "フォルダ",
-        "webmail.sys_address_menu"               => "組織アドレス帳",
-        "webmail.address_group_menu"             => "個人アドレス帳",
-        "webmail.filter_menu"                    => "フィルタ",
-        "webmail.template_menu"                  => "テンプレート",
-        "webmail.sign_menu"                      => "署名",
-        "webmail.memo_menu"                      => "メモ",
-        "webmail.tool_menu"                      => "ツール",
-        "webmail.setting_menu"                   => "設定",
-        "webmail.doc_menu"                       => "ヘルプ"
+        "webmail.show_gw_schedule_link"          => 1
     }}
   end
   
