@@ -1,8 +1,11 @@
 ﻿2.0.0
   * ruby,railsバージョンアップ
-  * 受信メールの多言語表示
+  * 受信メールの多言語表示に対応
   * imap/smtp/sso設定をconfigディレクトリに移動
+  * メニュー名等の設定をconfig/**/localesディレクトリに移動
   * 不要データを削除するcronタスクを追加
+  * 未使用テーブルを削除
+  * リファクタリング
 
 1.3.1
   * TinyMCEバージョンアップ
